--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,27 @@
     <string name="message_customer_trace">客户追踪</string>
     <string name="message_project_dynamic">楼盘动态</string>
     <string name="message_cooperate_rule">合作规则</string>
+
+    <!-- Customer State -->
+    <string name="customer_status">客户进度</string>
+    <string name="customer_status_report">报备</string>
+    <string name="customer_status_visit">到访</string>
+    <string name="customer_status_from">认筹</string>
+    <string name="customer_status_appointment">预约</string>
+    <string name="customer_status_deal">成交</string>
+    <string name="customer_status_has_report">已报备</string>
+    <string name="customer_status_to_be_verify">待验证</string>
+    <string name="report_status_to_be_verify">报备待验证</string>
+    <string name="report_status_effect">有效</string>
+    <string name="visit_status_to_be_verify">到访待验证</string>
+    <string name="customer_status_done">结佣</string>
+    <string name="customer_set_back_visit_time">设置回访时间</string>
+    <string name="customer_record">客户记录</string>
+    <string name="customer_trace_record">客户回访记录</string>
+    <string name="customer_trace_record_more">查看更多记录</string>
+    <string name="customer_detail_project_area">区域:</string>
+    <string name="customer_detail_project_price">总价:</string>
+    <string name="customer_detail_project_layout">户型:</string>
+    <string name="customer_detail_project_type">类型:</string>
+    <string name="no_trace_record">暂无客户纪录</string>
 </resources>
